@@ -7,11 +7,13 @@
 # Change 1..1 below to 1..last_test_to_print .
 # (It may become useful if the test is moved to ./t subdirectory.)
 
-BEGIN { $| = 1; print "1..43\n"; }
+BEGIN { $| = 1; print "1..46\n"; }
 END {print "not ok 1\n" unless $loaded;}
 use Imager;
 $loaded = 1;
 print "ok 1\n";
+
+require "t/testtools.pl";
 
 init_log("testout/t15color.log",1);
 
@@ -108,6 +110,13 @@ for my $entry (@hsv_vs_rgb) {
 # check the built-ins table
 color_ok($test_num++, 0, 0, 0, 255, 
 	Imager::Color->new(builtin=>'black'));
+
+my $c1 = Imager::Color->new(255, 255, 255, 0);
+my $c2 = Imager::Color->new(255, 255, 255, 255);
+okn($test_num++, !$c1->equals(other=>$c2), "not equal no ignore alpha");
+okn($test_num++, scalar($c1->equals(other=>$c2, ignore_alpha=>1)), 
+    "equal with ignore alpha");
+okn($test_num++, $c1->equals(other=>$c1), "equal to itself");
  
 sub test_col {
   my ($c, $r, $g, $b, $a) = @_;
